--- a/Styles.qss
+++ b/Styles.qss
@@ -14,12 +14,17 @@ QComboBox QAbstractItemView {
     border: 2px solid rgb(44,44,44);
     selection-background-color: rgb(44,44,44);
 }
+QFrame{
+   background: rgb(50,50,50);
+}
 QScrollArea{
     border: none;
+    background: rgb(96,96,96);
 }
 
 QLabel{
     color: rgb(220,220,220);
+    background: rgb(96,96,96);
 }
 QScrollBar:vertical {
     border: 1px solid rgb(44,44,44);
@@ -175,4 +180,6 @@ PluginView{
     border: 1px solid rgb(44,44,44);
     padding: 3px;
 }
-
+NotationPage{
+    background: rgb(200,200,200);
+}
