--- a/Styles.qss
+++ b/Styles.qss
@@ -91,6 +91,10 @@ QPushButton:pressed{
     background: rgb(130,130,130);
     border-style: inset;
 }
+QPushButton[toggled=true]{
+    background: rgb(112,44,32);
+}
+
 TrackLengthView{
     background: rgb(96,96,96);
     border: 1px solid rgb(44,44,44);
