I don't even remember what all of these changes were. All I know is they break a lot of things and fix a few things /shrug

--- a/Styles.qss
+++ b/Styles.qss
@@ -125,7 +125,7 @@ VelocityView{
     background: rgb(96,96,96);
 }
 
-PianoRoll{
+PianoRollWidget{
     border: 1px solid rgb(44,44,44);
     background: rgb(96,96,96);
 }
